@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,6 +30,7 @@ import com.sun.source.tree.Tree;
 import com.sun.source.util.Trees;
 import com.sun.tools.javac.api.JavacTaskImpl;
 import com.sun.tools.javac.util.Context;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 import javax.tools.Diagnostic;
@@ -52,8 +53,6 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
-import static java.util.stream.Collectors.toList;
 import java.util.stream.Stream;
 import javax.lang.model.util.Elements;
 import javax.tools.FileObject;
@@ -105,7 +104,7 @@ class TaskFactory {
     private final MemoryFileManager fileManager;
     private final JShell state;
     private String classpath = System.getProperty("java.class.path");
-    private final static Version INITIAL_SUPPORTED_VER = Version.parse("9");
+    private static final Version INITIAL_SUPPORTED_VER = Version.parse("9");
 
     TaskFactory(JShell state) {
         this.state = state;
@@ -169,7 +168,7 @@ class TaskFactory {
         List<String> allOptions = new ArrayList<>();
 
         allOptions.add("--should-stop=at=FLOW");
-        allOptions.add("-Xlint:unchecked");
+        allOptions.add("-Xlint:unchecked,-strictfp");
         allOptions.add("-proc:none");
         allOptions.addAll(extraArgs);
 
@@ -186,12 +185,12 @@ class TaskFactory {
 
         return runTask(wraps.stream(),
                        sh,
-                       List.of("-Xlint:unchecked", "-proc:none", "-parameters"),
+                       List.of("-Xlint:unchecked,-strictfp", "-proc:none", "-parameters"),
                        (jti, diagnostics) -> new CompileTask(sh, jti, diagnostics),
                        worker);
     }
 
-    private <S, T extends BaseTask, Z> Z runTask(Stream<S> inputs,
+    private <S, T extends BaseTask<S>, Z> Z runTask(Stream<S> inputs,
                                                  SourceHandler<S> sh,
                                                  List<String> options,
                                                  BiFunction<JavacTaskImpl, DiagnosticCollector<JavaFileObject>, T> creator,
@@ -201,7 +200,7 @@ class TaskFactory {
             allOptions.addAll(state.extraCompilerOptions);
             Iterable<? extends JavaFileObject> compilationUnits = inputs
                             .map(in -> sh.sourceToFileObject(fileManager, in))
-                            .collect(Collectors.toList());
+                            .toList();
             DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<>();
             state.debug(DBG_FMGR, "Task (%s %s) Options: %s\n", this, compilationUnits, allOptions);
             return javacTaskPool.getTask(null, fileManager, diagnostics, allOptions, null,
@@ -232,7 +231,7 @@ class TaskFactory {
             });
     }
 
-    interface Worker<T extends BaseTask, Z> {
+    interface Worker<T extends BaseTask<?>, Z> {
         public Z withTask(T task);
     }
 
@@ -260,15 +259,26 @@ class TaskFactory {
     private interface SourceHandler<T> {
 
         JavaFileObject sourceToFileObject(MemoryFileManager fm, T t);
+        T sourceForFileObject(JavaFileObject file);
 
         Diag diag(Diagnostic<? extends JavaFileObject> d);
     }
 
     private class StringSourceHandler implements SourceHandler<String> {
 
+        private final Map<URI, String> file2Snippet = new HashMap<>();
+
         @Override
         public JavaFileObject sourceToFileObject(MemoryFileManager fm, String src) {
-            return fm.createSourceFileObject(src, "$NeverUsedName$", src);
+            JavaFileObject result = fm.createSourceFileObject(src, "$NeverUsedName$", src);
+
+            file2Snippet.put(result.toUri(), src);
+            return result;
+        }
+
+        @Override
+        public String sourceForFileObject(JavaFileObject file) {
+            return file2Snippet.get(file.toUri());
         }
 
         @Override
@@ -310,9 +320,19 @@ class TaskFactory {
 
     private class WrapSourceHandler implements SourceHandler<OuterWrap> {
 
+        private final Map<URI, OuterWrap> file2Snippet = new HashMap<>();
+
         @Override
         public JavaFileObject sourceToFileObject(MemoryFileManager fm, OuterWrap w) {
-            return fm.createSourceFileObject(w, w.classFullName(), w.wrapped());
+            JavaFileObject result = fm.createSourceFileObject(w, w.classFullName(), w.wrapped());
+
+            file2Snippet.put(result.toUri(), w);
+            return result;
+        }
+
+        @Override
+        public OuterWrap sourceForFileObject(JavaFileObject file) {
+            return file2Snippet.get(file.toUri());
         }
 
         /**
@@ -334,7 +354,7 @@ class TaskFactory {
      * Parse a snippet of code (as a String) using the parser subclass.  Return
      * the parse tree (and errors).
      */
-    class ParseTask extends BaseTask {
+    class ParseTask extends BaseTask<String> {
 
         private final Iterable<? extends CompilationUnitTree> cuts;
         private final List<? extends Tree> units;
@@ -351,7 +371,7 @@ class TaskFactory {
                         List<? extends ImportTree> imps = cut.getImports();
                         return (!imps.isEmpty() ? imps : cut.getTypeDecls()).stream();
                     })
-                    .collect(toList());
+                    .toList();
         }
 
         private Iterable<? extends CompilationUnitTree> parse() {
@@ -375,7 +395,7 @@ class TaskFactory {
     /**
      * Run the normal "analyze()" pass of the compiler over the wrapped snippet.
      */
-    class AnalyzeTask extends BaseTask {
+    class AnalyzeTask extends BaseTask<OuterWrap> {
 
         private final Iterable<? extends CompilationUnitTree> cuts;
 
@@ -413,7 +433,7 @@ class TaskFactory {
     /**
      * Unit the wrapped snippet to class files.
      */
-    class CompileTask extends BaseTask {
+    class CompileTask extends BaseTask<OuterWrap> {
 
         private final Map<OuterWrap, List<OutputMemoryJavaFileObject>> classObjs = new HashMap<>();
 
@@ -471,18 +491,18 @@ class TaskFactory {
         javacTaskPool = new JavacTaskPool(5);
     }
 
-    abstract class BaseTask {
+    abstract class BaseTask<S> {
 
         final DiagnosticCollector<JavaFileObject> diagnostics;
         final JavacTaskImpl task;
         private DiagList diags = null;
-        private final SourceHandler<?> sourceHandler;
+        private final SourceHandler<S> sourceHandler;
         final Context context;
         private Types types;
         private JavacMessages messages;
         private Trees trees;
 
-        private <T>BaseTask(SourceHandler<T> sh,
+        private BaseTask(SourceHandler<S> sh,
                             JavacTaskImpl task,
                             DiagnosticCollector<JavaFileObject> diagnostics) {
             this.sourceHandler = sh;
@@ -592,6 +612,10 @@ class TaskFactory {
                 state.debug(DBG_GEN, "Pos: %d (%d - %d) -- %s\n", diag.getPosition(),
                         diag.getStartPosition(), diag.getEndPosition(), diag.getMessage(null));
             }
+        }
+
+        S sourceForFile(JavaFileObject sourceFile) {
+            return sourceHandler.sourceForFileObject(sourceFile);
         }
     }
 
